--- a/z_lib_girl/src/main/module/AndroidManifest.xml
+++ b/z_lib_girl/src/main/module/AndroidManifest.xml
@@ -11,15 +11,18 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity
-            android:name=".main.GirlsActivity"
-            android:screenOrientation="portrait">
+        <activity android:name="debug.LauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".main.GirlsActivity"
+            android:screenOrientation="portrait"/>
+
         <activity
             android:name=".girl.GirlActivity"
             android:screenOrientation="portrait"
