--- a/z_lib_user/src/main/module/AndroidManifest.xml
+++ b/z_lib_user/src/main/module/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.z_lib_news">
+    package="com.example.z_lib_user">
 
     <application
         android:name="debug.UserApplication"
