--- a/z_lib_girl/src/main/AndroidManifest.xml
+++ b/z_lib_girl/src/main/AndroidManifest.xml
@@ -3,10 +3,17 @@
     <application>
         <activity
             android:name=".main.GirlsActivity"
-            android:screenOrientation="portrait" />
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan" />
+
         <activity
             android:name=".girl.GirlActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:exported="false"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/AppTheme.NoActionBar" />
     </application>
 </manifest>
