--- a/z_lib_girl/src/main/module/AndroidManifest.xml
+++ b/z_lib_girl/src/main/module/AndroidManifest.xml
@@ -21,11 +21,17 @@
 
         <activity
             android:name=".main.GirlsActivity"
-            android:screenOrientation="portrait"/>
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"/>
 
         <activity
             android:name=".girl.GirlActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:exported="false"
             android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/AppTheme.NoActionBar" />
 
     </application>
