--- a/z_lib_home/src/main/module/AndroidManifest.xml
+++ b/z_lib_home/src/main/module/AndroidManifest.xml
@@ -21,9 +21,23 @@
 
         <activity
             android:name=".BottomNavigationActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
             android:label="@string/home_title_activity_fragment_module" />
-        <activity android:name=".glide.ViewpagerActivity" />
-        <activity android:name=".glide.SimpleActivity" />
+
+        <activity android:name=".glide.ViewpagerActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"/>
+
+        <activity android:name=".glide.SimpleActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"/>
 
     </application>
 
