--- a/z_lib_user/src/main/AndroidManifest.xml
+++ b/z_lib_user/src/main/AndroidManifest.xml
@@ -3,6 +3,12 @@
     package="com.example.z_lib_user">
 
     <application>
+        <activity android:name=".activity.UserMainActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
+            android:theme="@style/AppTheme.NoActionBar"/>
 
     </application>
 
