--- a/z_lib_user/src/main/module/AndroidManifest.xml
+++ b/z_lib_user/src/main/module/AndroidManifest.xml
@@ -19,6 +19,12 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".activity.UserMainActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan"
+            android:theme="@style/AppTheme.NoActionBar"/>
 
 
     </application>
