# 添加网络接口

--- a/z_lib_common/build.gradle
+++ b/z_lib_common/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     api rootProject.ext.dependencies.butterknife
     //Gson 库
     api rootProject.ext.dependencies.gson
+    //volley
+    api rootProject.ext.dependencies.volley
     // retrofit2
     api rootProject.ext.dependencies.retrofit
     api rootProject.ext.dependencies.PersistentCookieJar
