--- a/config.gradle
+++ b/config.gradle
@@ -28,6 +28,8 @@ ext {
 
     dependencies = [
             " permission"               : 'com.yanzhenjie:permission:2.0.0-rc12',
+            //volley
+            "volley"                    : "com.github.erd:android-volley:1.0.0",
             //rxjava
             "rxjava"                    : "io.reactivex.rxjava2:rxjava:2.2.6",
             "rxandroid"                 : "io.reactivex.rxjava2:rxandroid:2.1.0",
