--- a/z_lib_common/build.gradle
+++ b/z_lib_common/build.gradle
@@ -43,31 +43,30 @@ dependencies {
     api rootProject.ext.support["constraint-layout"]
     //    design
     api rootProject.ext.support["design"]
-    //arouter
-    api rootProject.ext.dependencies.arouter
+
     //other
     api rootProject.ext.dependencies.logger
     //分包
     api rootProject.ext.dependencies.multidex
-    //    butterknife 引用
+    //    butterKnife 引用
     api rootProject.ext.dependencies.butterknife
     //Gson 库
     api rootProject.ext.dependencies.gson
     //volley
-    api rootProject.ext.dependencies.volley
+    implementation rootProject.ext.dependencies.volley
     // retrofit2
     api rootProject.ext.dependencies.retrofit
     api rootProject.ext.dependencies.PersistentCookieJar
     api rootProject.ext.dependencies["adapter-rxjava"]
     api rootProject.ext.dependencies["converter-gson"]
-    //配合Rxjava 使用
+    //配合RxJava 使用
     api rootProject.ext.dependencies.okhttp
     api rootProject.ext.dependencies["okhttp-logging-interceptor"]
     //下面两个是RxJava 和 RxAndroid
     api rootProject.ext.dependencies.rxjava
     api rootProject.ext.dependencies.rxandroid
 
-    //recyclerview
+    //recyclerView
     api rootProject.ext.support["recyclerview-v7"]
     api rootProject.ext.dependencies.easyrecyclerview
 
