--- a/z_lib_news/build.gradle
+++ b/z_lib_news/build.gradle
@@ -89,4 +89,5 @@ dependencies {
     annotationProcessor rootProject.ext.dependencies["butterknife-compiler"]
     annotationProcessor rootProject.ext.dependencies["arouter-compiler"]
     implementation project(':z_lib_common')
+    implementation project(path: ':moduleBase')
 }
