--- a/modulePublic/z_lib_common/build.gradle
+++ b/modulePublic/z_lib_common/build.gradle
@@ -31,6 +31,17 @@ android {
         }
     }
 
+    //代码混淆
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
+
+
+
 }
 
 dependencies {
