--- a/moduleSystem/z_lib_base/build.gradle
+++ b/moduleSystem/z_lib_base/build.gradle
@@ -30,6 +30,20 @@ android {
             debuggable true
         }
     }
+
+    //代码混淆
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
+
+    //避免资源名冲突
+    resourcePrefix "base_"
+
+
 }
 
 dependencies {
