--- a/config.gradle
+++ b/config.gradle
@@ -64,6 +64,7 @@ ext {
 
             //沉溺式状态栏
             "barlibrary"                : "com.gyf.barlibrary:barlibrary:2.3.0",
+            "magicIndicator"                          : "com.github.hackware1993:MagicIndicator:1.5.0",
 
     ]
 
