--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,9 @@
         <meta-data
             android:name="APP_ID"
             android:value="${APP_ID}" />
+        <meta-data
+            android:name="SA_CONFIG_URL"
+            android:value="${SA_CONFIG_URL}" />
     </application>
 
 </manifest>
