--- a/moduleCore/z_lib_user/build.gradle
+++ b/moduleCore/z_lib_user/build.gradle
@@ -55,6 +55,7 @@ android {
                 //集成开发模式下排除debug文件夹中的所有Java文件
                 java {
                     exclude 'debug/**'
+                    // exclude '**/debug/**'
                 }
             }
 
