--- a/moduleSystem/z_lib_base/build.gradle
+++ b/moduleSystem/z_lib_base/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    api rootProject.ext.support["appcompat-v7"]
+    api rootProject.ext.support["appcompat"]
     api rootProject.ext.support["constraint-layout"]
 
     //arouter
