--- a/config.gradle
+++ b/config.gradle
@@ -14,15 +14,10 @@ ext {
 
     //support配置
     support = [
-            "constraint-layout"       : "com.android.support.constraint:constraint-layout:1.1.3",
-            'support-v4'              : "com.android.support:support-v4:${versions["support-version"]}",
-            'appcompat-v7'            : "com.android.support:appcompat-v7:${versions["support-version"]}",
+            "constraint-layout"       : "androidx.constraintlayout:constraintlayout:2.1.4",
+            'appcompat'               : "androidx.appcompat:appcompat:1.6.1",
             'recyclerview-v7'         : "com.android.support:recyclerview-v7:${versions["support-version"]}",
-            'support-v13'             : "com.android.support:support-v13:${versions["support-version"]}",
-            'support-fragment'        : "com.android.support:support-fragment:${versions["support-version"]}",
             'design'                  : "com.android.support:design:${versions["support-version"]}",
-            'animated-vector-drawable': "com.android.support:animated-vector-drawable:${versions["support-version"]}",
-            'cardview'                : "com.android.support:cardview-v7:${versions["support-version"]}",
             'junit'                   : "junit:junit:${versions["junit-version"]}",
     ]
 
