--- a/moduleSystem/z_lib_image/build.gradle
+++ b/moduleSystem/z_lib_image/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    api rootProject.ext.support["appcompat-v7"]
+    api rootProject.ext.support["appcompat"]
     api rootProject.ext.support["constraint-layout"]
 
     //glide
