--- a/z_lib_main/src/main/AndroidManifest.xml
+++ b/z_lib_main/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     package="com.example.z_lib_main">
 
     <application>
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
