--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,7 @@ android {
 
         ndk {
             // 设置支持的SO库架构（第三方腾讯bug上传含有多个SO库架构）
-            abiFilters 'armeabi', 'x86', 'armeabi-v7a'
-            //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+            abiFilters 'armeabi', 'x86', 'armeabi-v7a' , 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
         }
 
         //打包时间
@@ -69,10 +68,17 @@ android {
      */
     signingConfigs {
         release {
+            storeFile file("${rootProject.rootDir}${keystoreProperties['storeFile']}")
             keyAlias keystoreProperties['keyAlias']
             keyPassword keystoreProperties['keyPassword']
-            storeFile file(keystoreProperties['storeFile'])
             storePassword keystoreProperties['storePassword']
+
+//            storeFile file("${rootProject.rootDir}/dswy.keystore")
+//            storePassword "hjdswy="
+//            keyAlias "dswy"
+//            keyPassword "hjdswy="
+            v1SigningEnabled true
+            v2SigningEnabled true
         }
     }
 
